--- a/src/templates/en_CA/Game/score_finalize_form.tmpl
+++ b/src/templates/en_CA/Game/score_finalize_form.tmpl
@@ -24,27 +24,27 @@
     <td>Home Score:</td> <td>{$away_opp_score}</td>
   </tr>
   <tr class='schedule_item'>
-    <td>Visitors Score:</td> <td>{$home_opp_score}</td>
-    <td>Visitors Score:</td> <td>{$away_self_score}</td>
+    <td>Away Score:</td> <td>{$home_opp_score}</td>
+    <td>Away Score:</td> <td>{$away_self_score}</td>
   </tr>
   <tr class='schedule_item'>
-    <td>Visitors SOTG:</td>  <td>{$home_opp_sotg}</td>
+    <td>Away SOTG:</td>  <td>{$home_opp_sotg}</td>
     <td>Home SOTG:</td> <td>{$away_opp_sotg}</td>
   </tr>
 
-  <tr class='schedule_item'>
+  <tr class='schedule_title'>
     <td colspan='5'>&nbsp;</td>
   </tr>
 
   <tr class='schedule_item'>
-    <td>Final score should be:</td>
+    <td><b>Final score should be:</b></td>
     <td>Home Team:</td> 
     <td><input type='text' name='home_score' size='2' maxlength='2'></td>
     <td>Away Team:</td> 
     <td><input type='text' name='away_score' size='2' maxlength='2'></td>
   </tr>
   <tr class='schedule_item'>
-    <td>Team Spirit should be:</td>
+    <td><b>Spirit scores received should be:</b></td>
     <td>Home Team:</td>
     <td>
       <select name='home_sotg'>
