--- a/src/templates/en_CA/League/move_team_form.tmpl
+++ b/src/templates/en_CA/League/move_team_form.tmpl
@@ -10,7 +10,7 @@
 	<table border="0">
     <tr>
       <td colspan='2'>
-        You are attempting to move the team <b>{$team_name}</b>.  Select the
+        You are attempting to move the team <b>{$team_name|escape}</b>.  Select the
         league you wish to move it to.
       </td>
     </tr>
