--- a/src/templates/en_CA/League/review_scores.tmpl
+++ b/src/templates/en_CA/League/review_scores.tmpl
@@ -14,8 +14,8 @@
   {foreach name=games from=$games item=game}
   <tr class='schedule_item'>
     <td rowspan='4'>{$game.date}</td>
-    <td colspan='2'>{$game.home_name}</td>
-    <td colspan='2'>{$game.away_name}</td>
+    <td colspan='2'>{$game.home_name|escape}</td>
+    <td colspan='2'>{$game.away_name|escape}</td>
     <td rowspan='4'><a href="{$app_cgi_location}?op=game_finalize&id={$game.id}">finalize score</a></td>
   </tr>
 <tr class='schedule_item'>
@@ -23,11 +23,11 @@
   <td>Home Score:</td> <td>{$game.away_opp_score}</td>
 </tr>
 <tr class='schedule_item'>
-  <td>Visitors Score:</td> <td>{$game.home_opp_score}</td>
-  <td>Visitors Score:</td> <td>{$game.away_self_score}</td>
+  <td>Away Score:</td> <td>{$game.home_opp_score}</td>
+  <td>Away Score:</td> <td>{$game.away_self_score}</td>
 </tr>
 <tr class='schedule_item'>
-  <td>Visitors SOTG:</td>  <td>{$game.home_opp_sotg}</td>
+  <td>Away SOTG:</td>  <td>{$game.home_opp_sotg}</td>
   <td>Home SOTG:</td> <td>{$game.away_opp_sotg}</td>
 </tr>
   {/foreach}
