--- a/src/templates/en_CA/League/standings.tmpl
+++ b/src/templates/en_CA/League/standings.tmpl
@@ -8,11 +8,11 @@
       <td class='standings_title' valign='bottom' colspan=7>Current Round ({$current_round})</td>
     {/if}
     <td class='standings_title' valign='bottom' colspan=7>Season To Date</td>
-	  <td class='standings_title' valign='middle' rowspan=2>Avg. SOTG</td>
+	  <td class='standings_title' valign='middle' rowspan=2>Avg.<br>SOTG</td>
   </tr>
   <tr>
   {if $want_round}
-  	<td class='standings_subtitle' valign='bottom' >Win</td>
+  	<td class='standings_subtitle_lb' valign='bottom' >Win</td>
   	<td class='standings_subtitle' valign='bottom' >Loss</td>
   	<td class='standings_subtitle' valign='bottom' >Tie</td>
   	<td class='standings_subtitle' valign='bottom' >Dfl</td>
@@ -20,7 +20,7 @@
   	<td class='standings_subtitle' valign='bottom' >PA</td>
   	<td class='standings_subtitle' valign='bottom' >+/-</td>
   {/if}
-    <td class='standings_subtitle' valign='bottom' >Win</td>
+    <td class='standings_subtitle_lb' valign='bottom' >Win</td>
     <td class='standings_subtitle' valign='bottom' >Loss</td>
     <td class='standings_subtitle' valign='bottom' >Tie</td>
     <td class='standings_subtitle' valign='bottom' >Dfl</td>
@@ -32,28 +32,28 @@
   <tr>
     <td class='standings_item'>
     {if $perm_view_team}
-      <a href="{$app_cgi_location}?op=team_view&id={$team.id}">{$team.name}</a>
+      <a href="{$app_cgi_location}?op=team_view&id={$team.id}">{$team.name|escape}</a>
     {else}
-      {$team.name}
+      {$team.name|escape}
     {/if}
 	  </td>
     {if $want_round}
-    <td class='standings_item'>{$team.round_win}</td>
-    <td class='standings_item'>{$team.round_loss}</td>
-    <td class='standings_item'>{$team.round_tie}</td>
-    <td class='standings_item'>{$team.round_defaults_against}</td>
-    <td class='standings_item'>{$team.round_points_for}</td>
-    <td class='standings_item'>{$team.round_points_against}</td>
-    <td class='standings_item'>{$team.round_plusminus}</td>
+    <td class='standings_item_lb' align='center'>{$team.round_win}</td>
+    <td class='standings_item' align='center'>{$team.round_loss}</td>
+    <td class='standings_item' align='center'>{$team.round_tie}</td>
+    <td class='standings_item' align='center'>{$team.round_defaults_against}</td>
+    <td class='standings_item' align='center'>{$team.round_points_for}</td>
+    <td class='standings_item' align='center'>{$team.round_points_against}</td>
+    <td class='standings_item' align='center'>{$team.round_plusminus}</td>
     {/if}
-    <td class='standings_item'>{$team.win}</td>
-    <td class='standings_item'>{$team.loss}</td>
-    <td class='standings_item'>{$team.tie}</td>
-    <td class='standings_item'>{$team.defaults_against}</td>
-    <td class='standings_item'>{$team.points_for}</td>
-    <td class='standings_item'>{$team.points_against}</td>
-    <td class='standings_item'>{$team.plusminus}</td>
-    <td class='standings_item'>{$team.sotg}</td>
+    <td class='standings_item_lb' align='center'>{$team.win}</td>
+    <td class='standings_item' align='center'>{$team.loss}</td>
+    <td class='standings_item' align='center'>{$team.tie}</td>
+    <td class='standings_item' align='center'>{$team.defaults_against}</td>
+    <td class='standings_item' align='center'>{$team.points_for}</td>
+    <td class='standings_item' align='center'>{$team.points_against}</td>
+    <td class='standings_item' align='center'>{$team.plusminus}</td>
+    <td class='standings_item_lb' align='center'>{$team.sotg}</td>
   </tr>
   {/foreach}
   </tdata></table>
