--- a/src/templates/en_CA/Team/view.tmpl
+++ b/src/templates/en_CA/Team/view.tmpl
@@ -1,6 +1,6 @@
 {include file="common/basic_header.tmpl"}
 
-<h1>{$team_name}</h1>
+<h1>{$team_name|escape}</h1>
 <p>
   <a href="{$app_cgi_location}?op=team_schedule_view&id={$team_id}">schedule and scores</a>
   {if $team_status == 'open'}
@@ -17,10 +17,12 @@
   <tr>
     <td align="left" valign="top" width='250'>
       <table border="0">
+        {if $team_website}
         <tr>
           <td class='row_title'>Website:</td>
           <td class='row_data'><a href="{$team_website}" target="_new">{$team_website}</a></td>
         </tr>
+        {/if}
         <tr>
           <td class='row_title'>Shirt Colour:</td>
           <td class='row_data'>{$shirt_colour}</td>
