Further cleanups:   - move generate_password(), get_enum_options() and get_numeric_options() into     includes/common.inc   - remove display_error() in favour of handling errors directly using     error_exit().  This also removes $this->error_text in the handlers.   - add breadcrumb support (only in non-Smarty pages for now).  Breadcrumbs     require that each handler set a title using $this->set_title().   - added get_header() and get_footer() methods to Handler, to wrap calls     to theme_header and theme_footer (part of breadcrumbs support)   - fixed local_redirect() to work without needing url() to be called on its     parameter first.   - add edit/password/delete links to PersonView that were lost when     non-Smarty version went in.   - don't try and display phone numbers that aren't set (Person.php)   - moved Handler::is_database_error() functionality into includes/common.inc     as isDatabaseError(); old method retained for compatibility until I get     time to clean it up.

--- a/src/style.css
+++ b/src/style.css
@@ -83,8 +83,17 @@ TABLE {
 	padding-right: 7px;
 }
 
+.lr_navbar {
+	color: black;
+	background-color: white;
+	font-size: 11px;
+	border-top: 1px dotted black;
+	border-bottom: 1px dotted black;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
 .topbarlink:link, .topbarlink:visited {
-  color: white;
   text-decoration: none;
 }
 
