--- a/src/style.css
+++ b/src/style.css
@@ -106,7 +106,7 @@ TABLE {
 	text-decoration: underline;
 }
 
-.booking_title, .standings_title, .menu_title, .schedule_title, .teamlist_title, .roster_title {
+.ward_title, .booking_title, .standings_title, .menu_title, .schedule_title, .teamlist_title, .roster_title {
 	background-color:    black;
 	color:               white;
 	font-weight:         bold;
@@ -124,7 +124,7 @@ TABLE {
 	font-size: 11px;
 }
 
-.booking_item, .standings_item, .standings_item_lb, .menu_item, .schedule_item, .teamlist_item, .roster_item {
+.ward_item, .booking_item, .standings_item, .standings_item_lb, .menu_item, .schedule_item, .teamlist_item, .roster_item {
 	border-bottom-width: 1px;
 	border-bottom-color: gray;
 	border-bottom-style: solid;
