--- a/src/style.css
+++ b/src/style.css
@@ -1,154 +1,70 @@
-BODY {
-	background-color: #FFFFFF;
-	font-size: 12px;
-	font-family:  verdana, arial, helvetica, sans-serif;
+body            { background-color: white; font-size: 12px;
+                  font-family:  verdana, arial, helvetica, sans-serif; }
+h1              { font-size: 25px; font-variant: small-caps; }
+pre             { font-family: monospace; font-size: 12px; }
+table           { font-size: 12px; }
+
+.row_title      { color: black; font-weight: bold; font-size: 12px; }
+.warning        { background-color: red; border: 1px solid black; }
+
+.toprow         { color: white; background-color: black; border: 1px solid black;
+                  padding-left: 7px; padding-right: 7px; }
+
+.lr_navbar      { color: black; background-color: white; font-size: 11px;
+                  border-top: 1px dotted black; border-bottom: 1px dotted black;
+                  padding-left: 5px; padding-right: 5px;
 }
 
-H1 {
-	font-size: 25px;
-	font-variant: small-caps;
-}
+a               { text-decoration: none; }
+a:hover         { text-decoration: underline; }
 
-PRE {
-	font-family: monospace;
-	font-size: 12px;
-}
+.topbarlink:active  { color: red; }
 
-TABLE {
-	font-size: 12px;
-}
-
-.main {
-	background-color: white;
-	color: black;
-	font-size: 12px;
-	font-family:  verdana, arial, helvetica, sans-serif;
-}
-
-.list_head {
-	background-color: #999999;
-	color: black;
-	font-weight: bold;	
-	font-size: 12px;
-}
-
-.list_body_light {
-	background-color: #FFFFFF;
-	color: black;
-	font-size: 12px;
-}
-
-.list_body_dark {
-	background-color: #CCCCCC;
-	color: black;
-	font-size: 12px;
-}
-
-.row_title {
-	color: black;
-	font-weight: bold;
-	font-size: 12px;
-}
-
-.row_content {
-	color: black;
-	font-size: 12px;
-}
-
-.row_emph {
-	color: red;
-	font-size: 12px;
-	font-weight: bold;
-}
-
-.lightblue {
-	font-weight: bold;
-	color: #0099CC;
-}
-
-.small {
-	font-size: 11px;
-}
-
-.warning {
-	background-color: red;
-	border: 1px solid black;
-}
-
-.toprow {
-	color: white;
-	background-color: black;
-	border: 1px solid black;
-	padding-left: 7px;
-	padding-right: 7px;
-}
-
-.lr_navbar {
-	color: black;
-	background-color: white;
-	font-size: 11px;
-	border-top: 1px dotted black;
-	border-bottom: 1px dotted black;
-	padding-left: 5px;
-	padding-right: 5px;
-}
-
-.topbarlink:link, .topbarlink:visited {
-  text-decoration: none;
-}
-
-.topbarlink:active {
-  color: red;
-  text-decoration: none;
-}
-
-.topbarlink:hover {
-	text-decoration: underline;
-}
 
 .ward_title, .booking_title, .standings_title, .menu_title, .schedule_title, .teamlist_title, .roster_title {
-	background-color:    black;
-	color:               white;
-	font-weight:         bold;
-	border-bottom-width: 1px;
-	border-bottom-color: black;
-	border-bottom-style: solid;
-	font-size: 11px;
+    background-color:    black;
+    color:               white;
+    font-weight:         bold;
+    border-bottom-width: 1px;
+    border-bottom-color: black;
+    border-bottom-style: solid;
+    font-size: 11px;
 }
 
 .standings_subtitle, .standings_subtitle_lb, .schedule_subtitle, .roster_subtitle {
-	font-weight:         bold;
-	border-bottom-width: 1px;
-	border-bottom-color: black;
-	border-bottom-style: solid;
-	font-size: 11px;
+    font-weight:         bold;
+    border-bottom-width: 1px;
+    border-bottom-color: black;
+    border-bottom-style: solid;
+    font-size: 11px;
 }
 
 .ward_item, .booking_item, .standings_item, .standings_item_lb, .menu_item, .schedule_item, .teamlist_item, .roster_item {
-	border-bottom-width: 1px;
-	border-bottom-color: gray;
-	border-bottom-style: solid;
-	font-size: 11px;
+    border-bottom-width: 1px;
+    border-bottom-color: gray;
+    border-bottom-style: solid;
+    font-size: 11px;
 }
 
 .standings_subtitle_lb, .standings_item_lb {
-	border-left-width: 1px;
-	border-left-color: gray;
-	border-left-style: solid;
+    border-left-width: 1px;
+    border-left-color: gray;
+    border-left-style: solid;
 }
 
 .roster_conflict {
-	border-bottom-width: 1px;
-	border-bottom-color: gray;
-	border-bottom-style: solid;
-	background-color: red;
-	font-size: 11px;
+    border-bottom-width: 1px;
+    border-bottom-color: gray;
+    border-bottom-style: solid;
+    background-color: red;
+    font-size: 11px;
 }
 
-a {
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
+.calendar .row-week td a  { display: block; }
+.calendar .row-week td a:hover { background-color: #888; color: #fff; }
+.calendar a               { text-decoration: none; }
+.calendar a:hover         { text-decoration: none; }
+.calendar table           { border-collapse: collapse; width: 100%; }
+.calendar td              { text-align: center; border: 1px solid #000;
+                            padding: 1px; margin: 0; font-size: 0.8em; }
+.calendar .highlighted-day { background-color: #CC0; }
