--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
 body            { background-color: white; font-size: 10pt;
                   font-family:  verdana, arial, helvetica, sans-serif; }
 h1              { font-size: 25pt; font-variant: small-caps; }
-pre             { font-family: monospace; font-size: 12pt; }
+pre             { font-family: monospace; font-size: 10pt; }
 table           { font-size: 10pt; }
 
-.row_title      { color: black; font-weight: bold; font-size: 12pt; }
+.row_title      { color: black; font-weight: bold; font-size: 10pt; }
 .warning        { background-color: red; border: 1px solid black; }
 
 .toprow         { color: white; background-color: black; border: 1px solid black;
@@ -60,6 +60,13 @@ a:hover         { text-decoration: underline; }
 .myteams td { vertical-align: top; font-size: 10pt; }
 .myteams .highlight { background-color: lightblue; }
 
+.waitlist table { border-collapse: collapse; width: 100% }
+.waitlist th { float: left; text-align: left; background-color: black; color: white; font-size: 12pt; }
+.waitlist th a { color: white; font-size: 10pt; float: right; text-align: right; }
+
+.waitlist td { padding-left: 10px; vertical-align: top; font-size: 10pt; }
+.waitlist .row_title { width: 20%; }
+.waitlist .highlight { background-color: lightgreen; }
 
 .oldmenu table { border-collapse: collapse; }
 .oldmenu th { text-align: left; background-color: black; color: white; 
