--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
-body            { background-color: white; font-size: 10pt;
-                  font-family:  verdana, arial, helvetica, sans-serif; }
-h1              { font-size: 25pt; font-variant: small-caps; }
-pre             { font-family: monospace; font-size: 10pt; }
-table           { font-size: 10pt; }
+body            { background-color: white; font-size: 9pt;
+                  font-family: verdana, arial, helvetica, sans-serif; }
+h1              { font-size: 18px;}
+pre             { font-family: monospace; font-size: 9pt; }
+table           { font-size: 9pt; }
 
-.row_title      { color: black; font-weight: bold; font-size: 10pt; }
+.row_title      { color: black; font-weight: bold; font-size: 9pt; }
 .warning        { background-color: red; border: 1px solid black; }
 
 .toprow         { color: white; background-color: black; border: 1px solid black;
@@ -22,7 +22,7 @@ a:hover         { text-decoration: underline; }
     border-bottom-width: 1px;
     border-bottom-color: black;
     border-bottom-style: solid;
-    font-size: 10pt;
+    font-size: 9pt;
 }
 
 .standings_subtitle, .standings_subtitle_lb, .schedule_subtitle, .roster_subtitle {
@@ -30,14 +30,14 @@ a:hover         { text-decoration: underline; }
     border-bottom-width: 1px;
     border-bottom-color: black;
     border-bottom-style: solid;
-    font-size: 10pt;
+    font-size: 9pt;
 }
 
 .ward_item, .booking_item, .standings_item, .standings_item_lb, .schedule_item, .teamlist_item, .roster_item {
     border-bottom-width: 1px;
     border-bottom-color: gray;
     border-bottom-style: solid;
-    font-size: 10pt;
+    font-size: 9pt;
 }
 
 .standings_subtitle_lb, .standings_item_lb {
@@ -51,29 +51,29 @@ a:hover         { text-decoration: underline; }
     border-bottom-color: gray;
     border-bottom-style: solid;
     background-color: red;
-    font-size: 10pt;
+    font-size: 9pt;
 }
 
 .myteams table { border-collapse: collapse; width: 100% }
 .myteams th { text-align: left; background-color: black; color: white; 
-              font-size: 12pt; }
-.myteams td { vertical-align: top; font-size: 10pt; }
+              font-size: 9pt; }
+.myteams td { vertical-align: top; font-size: 9pt; }
 .myteams .highlight { background-color: lightblue; }
 
 .waitlist table { border-collapse: collapse; width: 100% }
-.waitlist th { float: left; text-align: left; background-color: black; color: white; font-size: 12pt; }
-.waitlist th a { color: white; font-size: 10pt; float: right; text-align: right; }
+.waitlist th { float: left; text-align: left; background-color: black; color: white; font-size: 9pt; }
+.waitlist th a { color: white; font-size: 9pt; float: right; text-align: right; }
 
-.waitlist td { padding-left: 10px; vertical-align: top; font-size: 10pt; }
+.waitlist td { padding-left: 10px; vertical-align: top; font-size: 9pt; }
 .waitlist .row_title { width: 20%; }
 .waitlist .highlight { background-color: lightgreen; }
 
 .oldmenu table { border-collapse: collapse; }
 .oldmenu th { text-align: left; background-color: black; color: white; 
-              font-size: 12pt; }
+              font-size: 9pt; }
 .oldmenu td { vertical-align: top; border-bottom-width: 1px;
               border-bottom-color: gray; border-bottom-style: solid;
-	      font-size: 9pt; }
+	      font-size: 8pt; }
 
 
 .calendar .row-week td a  { display: block; }
@@ -84,18 +84,15 @@ a:hover         { text-decoration: underline; }
 .calendar .highlighted-day { background-color: #CC0; }
 .calendar .current-day     { background-color: #C00; }
 
-.lr_topbar td    { color: black; font-size: 10pt; border: 0px; }
+.lr_topbar td    { color: black; font-size: 9pt; border: 0px; }
 .lr_topbar table { border-collapse: collapse; width: 100%; }
 .lr_topbar a:active  { color: red; }
 .lr_topbar .nav  { background-color: lightgray; 
                    padding-left: 5px; padding-right: 5px; }
-.lr_topbar .off  { background-color: darkgray; text-align: center;
-                   border-left: thin solid black; border-top: thin solid black; 
-		   border-right: thin solid black; }
-.lr_topbar .on   { background-color: white; font-weight: bold; 
-                   text-align: center; border-bottom: thin solid black; }
+.lr_topbar .off  { background-color: darkgray; text-align: center; border-left: thin solid black; border-top: thin solid black; border-right: thin solid black }
+.lr_topbar .on   { background-color: white; font-weight: bold; text-align: center; border-bottom: thin solid black }
 
 .fieldlist table { border-collapse: collapse; width: 100%; }
 .fieldlist th    { background-color: black; color: white; font-weight: bold;
-                   font-size: 12pt; }
-.fieldlist td    { vertical-align: top; font-size: 9pt; }
+                   font-size: 9pt; }
+.fieldlist td    { vertical-align: top; font-size: 8pt; }
