--- a/src/style.css
+++ b/src/style.css
@@ -13,45 +13,27 @@ table           { font-size: 9pt; }
 a               { text-decoration: none; }
 a:hover         { text-decoration: underline; }
 
-
-
-.ward_title, .booking_title, .standings_title, .schedule_title, .teamlist_title, .roster_title {
+.listtable th {
     background-color:    black;
     color:               white;
     font-weight:         bold;
-    border-bottom-width: 1px;
-    border-bottom-color: black;
-    border-bottom-style: solid;
-    font-size: 9pt;
+	border-bottom: 1px solid black;
+	text-align: left;
 }
 
-.standings_subtitle, .standings_subtitle_lb, .schedule_subtitle, .roster_subtitle {
-    font-weight:         bold;
-    border-bottom-width: 1px;
-    border-bottom-color: black;
-    border-bottom-style: solid;
-    font-size: 9pt;
+.listtable td {
+	border-bottom: 1px solid gray;
+	vertical-align: top;
 }
 
-.ward_item, .booking_item, .standings_item, .standings_item_lb, .schedule_item, .teamlist_item, .roster_item {
-    border-bottom-width: 1px;
-    border-bottom-color: gray;
-    border-bottom-style: solid;
-    font-size: 9pt;
+.listtable td .subtitle {
+	font-weight: bold;
+	border-bottom: 1px solid black;
 }
 
-.standings_subtitle_lb, .standings_item_lb {
-    border-left-width: 1px;
-    border-left-color: gray;
-    border-left-style: solid;
-}
-
-.roster_conflict {
-    border-bottom-width: 1px;
-    border-bottom-color: gray;
-    border-bottom-style: solid;
-    background-color: red;
-    font-size: 9pt;
+.listtable .roster_conflict {
+    color: red;
+	font-weight: bold;
 }
 
 .myteams table { border-collapse: collapse; width: 100% }
@@ -96,3 +78,5 @@ a:hover         { text-decoration: underline; }
 .fieldlist th    { background-color: black; color: white; font-weight: bold;
                    font-size: 9pt; }
 .fieldlist td    { vertical-align: top; font-size: 8pt; }
+
+.error { color: red }
