- fix permissions for player vs. visitor - temporarily disable waitinglist support - fix colours in style.css

--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ td		{ vertical-align: top }
 }
 
 .schedule tr.dark {
-	background-color: lightgray;
+	background-color: #DDF;
 }
 
 .fieldlist table { border-collapse: collapse; width: 100%; }
