--- a/src/style.css
+++ b/src/style.css
@@ -147,6 +147,9 @@ fieldset {
 .form-item {
   margin-bottom: 1em;
 } 
+.form-item .form-radio {
+  margin-bottom: -0.25em;
+} 
 .form-item .description {
   font-size: 0.85em;
 }
