Fix the standings table for current round / season standings split

--- a/src/style.css
+++ b/src/style.css
@@ -175,3 +175,10 @@ li.active a {
 .form-reset .form-submit {
   margin: 0.5em 0;
 }
+
+/* Current Round / Season Standings */
+.standings {
+   background-color:#dddddd
+}
+
+
