Add functionality to show smaller sub-set of standings page (for pyramid leagues) to view standings for a team, highlight the team with styles

--- a/src/style.css
+++ b/src/style.css
@@ -181,4 +181,10 @@ li.active a {
    background-color:#dddddd
 }
 
+/* to highlight teams in the standings list */
+.teamhighlight {
+   background-color:#FFC;
+	font-weight: bold;
+}
+
 
