- swap sorting order on league spirit page - remove yellow coloring of team in standings page, fix green 'tier' coloring - add coordinator and captain email list fields in league

--- a/src/style.css
+++ b/src/style.css
@@ -189,11 +189,14 @@ li.active a {
 
 /* to highlight teams in the standings list */
 .teamhighlight {
-   background-color:#FFC;
 	font-weight: bold;
 }
 
 .tierhighlight {
    background-color:lightgreen;
+}
+.tierhighlightteam {
+   background-color:lightgreen;
+	font-weight: bold;
 }
 
