--- a/src/style.css
+++ b/src/style.css
@@ -214,3 +214,20 @@ li.active a {
 .scoretable td.losing {
    background-color: #ffcccc;
 }
+
+/* NEW STUFF */
+#loginbox {
+	width: 400px;
+	margin: 0px auto;
+}
+#loginbox form label {
+	text-align: right;
+	width: 105px;
+	float: left;
+	padding: 8px 2px 0 0;
+}
+#loginbox form input {
+	font-family: Verdana, sans-serif;
+	padding: 3px;
+	margin: 3px;
+}
