--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,19 +116,19 @@ tr.dark {
 
 li.expanded {
 	list-style-type: circle;
-	list-style-image: url(image/menu/menu-expanded.png);
+	list-style-image: url(../image/menu/menu-expanded.png);
 	padding: 0.2em 0.5em 0 0;
 	margin: 0;
 }
 li.collapsed {
 	list-style-type: disc;
-	list-style-image: url(image/menu/menu-collapsed.png);
+	list-style-image: url(../image/menu/menu-collapsed.png);
 	padding: 0.2em 0.5em 0 0;
 	margin: 0;
 }
 li.leaf {
 	list-style-type: square;
-	list-style-image: url(image/menu/menu-leaf.png);
+	list-style-image: url(../image/menu/menu-leaf.png);
 	padding: 0.2em 0.5em 0 0;
 	margin: 0;
 }
@@ -226,15 +226,15 @@ th {
 
 /* Datatables jquery plugin */
 .sorting_asc {
-        background: url('image/datatables/sort_asc.png') no-repeat center right;
+        background: url('../image/datatables/sort_asc.png') no-repeat center right;
 }
 
 .sorting_desc {
-        background: url('image/datatables/sort_desc.png') no-repeat center right;
+        background: url('../image/datatables/sort_desc.png') no-repeat center right;
 }
 
 .sorting {
-        background: url('image/datatables/sort_both.png') no-repeat center right;
+        background: url('../image/datatables/sort_both.png') no-repeat center right;
 }
 
 /* Zebra */
