Templating: field/list.
Also, removes separate view for closed fields.  Users with access to see them
will now see them listed on the same list, but visually differentiated.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,12 +77,9 @@ tr.dark {
 	background-color: #DDF;
 }
 
-.fieldlist table { border-collapse: collapse; width: 100%; }
-.fieldlist th    { background-color: black; color: white; font-weight: bold;
-                   font-size: 9pt; }
-.fieldlist td    { font-size: 8pt; }
-.fieldlist ul    { margin-top: 0; margin-left: 0; padding-left: 1em; }
-
+.fieldlist th    { background-color: white; color: #039; font-weight: bold; font-size: 1.5em }
+.fieldlist td a { font-weight: bold }
+.fieldlist td a.closedfield { font-weight: normal; text-decoration: line-through; color: #C0C0C0; }
 
 .splash table { border-collapse: collapse; width: 100% !important; }
 .splash th { text-align: left; background-color: black; color: white;
