--- a/src/css/style.css
+++ b/src/css/style.css
@@ -213,28 +213,16 @@ li.active a {
 	margin: 3px;
 }
 
+/* necessary? */
 th {
 	text-align: left;
 }
 
-/* Datatables jquery plugin */
-.sorting_asc {
-        background: url('../image/datatables/sort_asc.png') no-repeat center right;
+/* datatables striping */
+tr.odd {
+	background-color: #E2E4FF;
 }
 
-.sorting_desc {
-        background: url('../image/datatables/sort_desc.png') no-repeat center right;
+tr.even {
+	background-color: white;
 }
-
-.sorting {
-        background: url('../image/datatables/sort_both.png') no-repeat center right;
-}
-
-/* Zebra */
-tbody tr.even td {
-	background-color: #eee;
-}
-tbody tr.odd td {
-	background-color: #fff;
-}
-
