--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,6 @@
 .warning        { background-color: red; border: 1px solid black; }
 
 /* Defaults for tables */
-table           { margin: 0; padding: 0; border-collapse: collapse; }
 fieldset {
 	margin-bottom: 1em;
 	padding: .5em;
@@ -10,9 +9,6 @@ fieldset fieldset {
 	border: 1px solid #993333;
 }
 
-#main table { 
-    width: auto; 
-}
 #main td, #main th { 
 	vertical-align: top; 
 	padding-left: 0.3em; 
@@ -222,3 +218,62 @@ tr.even {
 tr.region_mismatch {
 	background-color: orange;
 }
+
+/* Datatables + jQueryUI needs this for keeping sort arrows on same line as header */
+.css_right { float: right; }
+.css_left  { float: left; }
+
+/* Additional Datatables+jQueryUI evil for pagination buttons */
+.paging_full_numbers .fg-button {
+	padding: 2px 6px;
+	cursor: pointer;
+	* cursor: hand;
+}
+
+.fg-toolbar {
+	padding: 5px;
+}
+
+.dataTables_info {
+	width: 50%;
+	float: left;
+}
+
+.dataTables_paginate {
+	width: auto;
+}
+
+.dataTables_paginate {
+	float: right;
+	text-align: right;
+}
+
+.paging_full_numbers {
+	width: 400px;
+	height: 22px;
+	line-height: 22px;
+}
+
+.paging_full_numbers span.paginate_button,
+ 	.paging_full_numbers span.paginate_active {
+	border: 1px solid #aaa;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	padding: 2px 5px;
+	margin: 0 3px;
+	cursor: pointer;
+	*cursor: hand;
+}
+
+.paging_full_numbers span.paginate_button {
+	background-color: #ddd;
+}
+
+.paging_full_numbers span.paginate_button:hover {
+	background-color: #ccc;
+}
+
+.paging_full_numbers span.paginate_active {
+	background-color: #99B3FF;
+}
+
